🆙 Update environnement variables

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-TOKEN="" # Token du bot
-DBCONNECTION="" # Connection à la base de donnée
+# Token du bot
+TOKEN=""
+# Lien de connection à la base de donnée
+DBCONNECTION=""
+# Token blagues-api.fr
+BLAGUEAPITOKEN=""
+# Top.gg Token (non requis)
+TOPGGTOKEN=""
+# shadow-bot.fr Token (non requis)
+SBLTOKEN=""
