--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "rainsbot",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "**RainsBot** est un bot __puissant__, __complet__ et **customisable**. Ses plugins de logs, de protection et de message de bienvenue et d'aurevoir vous assure un contrôle de votre communauté ! \\nDécouvrez aussi son module de Giveaways, et toutes les commandes utiles à la modération.",
   "main": "index.js",
   "dependencies": {
+    "@shadowlist/sblapi": "^1.0.5",
+    "@top-gg/sdk": "^3.0.9",
     "beautify": "0.0.8",
+    "canvas": "^2.6.1",
     "discord-giveaways": "^4.2.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "figlet": "^1.5.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
-    "ms": "^2.1.2"
+    "ms": "^2.1.2",
+    "topgg-autoposter": "^1.1.7"
   },
   "devDependencies": {},
   "scripts": {
