--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ TOKEN=""
 DBCONNECTION=""
 # Token blagues-api.fr
 BLAGUEAPITOKEN=""
+# Top.gg auth (non requis)
+TOGGAUTH=""
 # Top.gg Token (non requis)
 TOPGGTOKEN=""
 # shadow-bot.fr Token (non requis)
