--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rainsbot",
-  "version": "1.1.3",
-  "description": "**RainsBot** est un bot __puissant__, __complet__ et **customisable**. Ses plugins de logs, de protection et de message de bienvenue et d'aurevoir vous assure un contrôle de votre communauté ! \\nDécouvrez aussi son module de Giveaways, et toutes les commandes utiles à la modération.",
+  "name": "rainsbot_dev",
+  "version": "2.0.0",
+  "description": "**RainsBot** est un bot __puissant__, __complet__ et **customisable**. Ses plugins de logs, de protection et de message de bienvenue et d'aurevoir vous assure un contrôle de votre communauté ! \nDécouvrez aussi son module de Giveaways, et toutes les commandes utiles à la modération.",
   "main": "index.js",
   "dependencies": {
     "@shadowlist/sblapi": "^1.0.5",
@@ -21,14 +21,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "COCO150",
+  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/COCO150/RainsBot.git"
+    "url": "git+https://github.com/COCO150/RainsBot_DEV.git"
   },
-  "author": "COCO150#0001",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/COCO150/RainsBot/issues"
+    "url": "https://github.com/COCO150/RainsBot_DEV/issues"
   },
-  "homepage": "https://github.com/COCO150/RainsBot#readme"
+  "homepage": "https://github.com/COCO150/RainsBot_DEV#readme"
 }
