--- a/.env
+++ b/.env
@@ -4,9 +4,7 @@ TOKEN=""
 DBCONNECTION=""
 # Token blagues-api.fr
 BLAGUEAPITOKEN=""
-# Top.gg auth (non requis)
+# Top.gg auth
 TOGGAUTH=""
-# Top.gg Token (non requis)
+# Top.gg Token
 TOPGGTOKEN=""
-# shadow-bot.fr Token (non requis)
-SBLTOKEN=""
